RESOLVED FIXED21041
"Add Contact" link at gmail does not support AXPress action
https://bugs.webkit.org/show_bug.cgi?id=21041
Summary "Add Contact" link at gmail does not support AXPress action
Beth Dakin
Reported 2008-09-23 14:41:58 PDT
All ARIA links are not clickable via accessibility. Steps to reproduce: 1. Login to Gmail account 2. Use Accessibility Inspector to inspect the "Add Contact" ARIA link. ("Add Contact" is a div with role="link") The AXPress action is missing. Impact on VoiceOver: VO user cannot click on this link
Attachments
Patch to add support to ARIA links in AccessibilityObject::anchorElement() (14.14 KB, patch)
2008-09-23 14:52 PDT, Beth Dakin
sam: review+
Beth Dakin
Comment 1 2008-09-23 14:52:46 PDT
Created attachment 23729 [details] Patch to add support to ARIA links in AccessibilityObject::anchorElement()
Beth Dakin
Comment 2 2008-09-23 14:53:02 PDT
Sam Weinig
Comment 3 2008-09-23 17:03:18 PDT
Comment on attachment 23729 [details] Patch to add support to ARIA links in AccessibilityObject::anchorElement() Though you should make the changes discussed.
Beth Dakin
Comment 4 2008-09-23 17:10:00 PDT
Fixed with r36818.
Note You need to log in before you can comment on or make changes to this bug.