WebCore/page/AccessibilityRenderObject.h
@@ -135,7 +135,7 @@ public:
     virtual Element* actionElement() const;
     Element* mouseButtonListener() const;
     FrameView* frameViewIfRenderView() const;
-    virtual HTMLAnchorElement* anchorElement() const;
+    virtual Element* anchorElement() const;
     AccessibilityObject* menuForMenuButton() const;
     AccessibilityObject* menuButtonForMenu() const;
     
